objects/PC_OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>PC_ActualDeliveryDate__c</fullName>
        <description>Date when the order was delivered.</description>
        <inlineHelpText>Date when the order was delivered.</inlineHelpText>
        <label>Actual Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_DaysSupply__c</fullName>
        <description>Number of days the prescribed medication will last if taken as per the recommended dosage.</description>
        <inlineHelpText>Number of days the prescribed medication will last if taken as per the recommended dosage.</inlineHelpText>
        <label>Days Supply</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_EstimatedDeliveryDate__c</fullName>
        <description>Date when the order is expected to deliver.</description>
        <inlineHelpText>Date when the order is expected to deliver.</inlineHelpText>
        <label>Estimated Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_NDC__c</fullName>
        <description>National Drug Code associated with the product being order.</description>
        <formula>PC_Product__r.PC_NDC__c</formula>
        <inlineHelpText>National Drug Code associated with the product being order.</inlineHelpText>
        <label>NDC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_OrderItemStatus__c</fullName>
        <description>Status of the order item.</description>
        <inlineHelpText>Status of the order item.</inlineHelpText>
        <label>Order Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Entered-in-error</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_OrderItemType__c</fullName>
        <description>Type of the order item.</description>
        <inlineHelpText>Type of the order item.</inlineHelpText>
        <label>Order Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Informational Kits</fullName>
                </value>
                <value>
                    <fullName>Drugs</fullName>
                </value>
                <value>
                    <fullName>Combination Product</fullName>
                </value>
                <value>
                    <fullName>Related Supplies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Order__c</fullName>
        <description>Order associated with the order item.</description>
        <inlineHelpText>Order associated with the order item.</inlineHelpText>
        <label>Order</label>
        <referenceTo>PC_Order__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_Packaging__c</fullName>
        <description>Type of packaging of the order item.</description>
        <inlineHelpText>Type of packaging of the order item.</inlineHelpText>
        <label>Packaging</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pills</fullName>
                </value>
                <value>
                    <fullName>Bottles</fullName>
                </value>
                <value>
                    <fullName>Cardboard Boxes</fullName>
                </value>
                <value>
                    <fullName>Plastic Containers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ProductDescription__c</fullName>
        <description>Description of the Product being ordered.</description>
        <formula>PC_Product__r.Description</formula>
        <inlineHelpText>Description of the Product being ordered.</inlineHelpText>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being ordered.</description>
        <inlineHelpText>Product being ordered.</inlineHelpText>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Quantity__c</fullName>
        <description>Quantity of the product being ordered.</description>
        <inlineHelpText>Quantity of the product being ordered.</inlineHelpText>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ReceivedBy__c</fullName>
        <description>Entity who received the order.</description>
        <inlineHelpText>Entity who received the order.</inlineHelpText>
        <label>Received By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_ShipmentTrackingNumber__c</fullName>
        <description>Unique tracking number of the order shipment.</description>
        <inlineHelpText>Unique tracking number of the order shipment.</inlineHelpText>
        <label>Shipment Tracking Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_ShippingDate__c</fullName>
        <description>Date when the order is shipped.</description>
        <inlineHelpText>Date when the order is shipped.</inlineHelpText>
        <label>Shipping Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Strength__c</fullName>
        <description>Strength of the Drug / Product.</description>
        <formula>PC_Product__r.PC_Strength__c</formula>
        <inlineHelpText>Strength of the Drug / Product.</inlineHelpText>
        <label>Strength</label>
        <type>Text</type>
    </fields>
    <label>Order Item</label>
    <nameField>
        <displayFormat>Item-{0000}</displayFormat>
        <label>OrderItemNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>